# sentinel

./: .clang-tidy  .gitignore  AGENTS.md  AUTHORS.md  CLAUDE.md  CMakeLists.txt  CPPLINT.cfg  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  README.md  build.sh  gcovr.cfg  oss-pkg-info.yaml
.github/: copilot-instructions.md
changedlinefinder/: CMakeLists.txt
changedlinefinder/src/: main.cpp
cmake/: CMakeUtils.cmake  FindClang.cmake  FindLibGit2.cmake
evaluator/: CMakeLists.txt
evaluator/lib/: CMakeLists.txt
evaluator/lib/tinyxml/: CMakeLists.txt
evaluator/src/: main.cpp
gcc_plugin/: CMakeLists.txt
gcc_plugin/src/: gcc_mutant_finder.cpp
gcc_plugin/test/: sample.cpp
generator/: CMakeLists.txt
generator/src/: main.cpp
include/: lemon_ast_consumer.h  lemon_ast_visitor.h  lemon_configuration.h  lemon_utility.h  mutant_database.h  mutant_entry.h  mutation_operators.h
include/mutation-operators/: aor.h  bor.h  lcr.h  ror.h  sbr.h  sor.h  template.h  uoi.h  uor.h
include/sentinel/: CTestXmlParser.hpp  CliConfigParser.hpp  Command.hpp  CommandEvaluate.hpp  CommandGui.hpp  CommandMutate.hpp  CommandPopulate.hpp  CommandReport.hpp  CommandRun.hpp  CommandStandAlone.hpp  Config.hpp  ConfigResolver.hpp  ConfigValidator.hpp  Console.hpp  Container.hpp  CoverageInfo.hpp  DefaultLogger.hpp  Evaluator.hpp  GitRepository.hpp  GitSourceTree.hpp  GoogleTestXmlParser.hpp  HTMLReport.hpp  HtmlReport.hpp  Logger.hpp  Logging.hpp  MainCLI.hpp  Mutable.hpp  MutableGenerator.hpp  MutableSelector.hpp  Mutables.hpp  Mutant.hpp  MutantGenerator.hpp  Mutants.hpp  MutationFactory.hpp  MutationResult.hpp  MutationResults.hpp  MutationRunner.hpp  MutationState.hpp  MutationSummary.hpp  OomHandler.hpp  (+32 more)
include/sentinel/docGenerator/: CSSGenerator.hpp  CssGenerator.hpp  DOCGenerator.hpp  DocGenerator.hpp  EmptyIndexHTMLGenerator.hpp  EmptyIndexHtmlGenerator.hpp  IndexHTMLGenerator.hpp  IndexHtmlGenerator.hpp  SrcHTMLGenerator.hpp  (+1 more)
lemon/: CMakeLists.txt
lemon/src/: lemon_configuration.cpp  lemon_utility.cpp  main.cpp  mutant_database.cpp
ramses-ex/: target_lines.txt
ramses-ex/mutants/: CommandLineParser.MUT1.cpp  CommandLineParser.MUT2.cpp  CommandLineParser.MUT3.cpp  CommandLineParser.MUT4.cpp  CommandLineParser.MUT5.cpp  CommandLineParser_mut_db.csv  StringUtils.MUT1.cpp  StringUtils.MUT2.cpp  StringUtils.MUT3.cpp  StringUtils.MUT4.cpp  StringUtils_mut_db.csv
ramses-ex/orig-results/: TestResult_ramses-capu-test.xml  TestResult_ramses-client-test.xml  TestResult_ramses-framework-test.xml  TestResult_ramses-renderer-lib-test.xml  TestResult_ramses-renderer-test.xml  TestResult_ramses-resource-tools-test.xml  TestResult_ramses-shader-tools-test.xml  TestResult_ramses-utils-lib-test.xml
resources/man/: sentinel.1  sentinel.1.in
sample/: .gitignore  CMakeLists.txt  README.md  sentinel.yaml
sample/src/: CMakeLists.txt  Calculator.cpp  Calculator.hpp  Stack.cpp  Stack.hpp  Tokenizer.cpp  Tokenizer.hpp  main.cpp
sample/test/: CMakeLists.txt  CalculatorTest.cpp  StackTest.cpp  TokenizerTest.cpp
scripts/: CMakeUtils.cmake  FindClang.cmake  extract_targetlines_from_commit.py  generate_mutant.py  generate_mutants.py  mutant_execution.py  run.py
src/: CMakeLists.txt  CTestXmlParser.cpp  CliConfigParser.cpp  Command.cpp  CommandEvaluate.cpp  CommandGui.cpp  CommandMutate.cpp  CommandPopulate.cpp  CommandReport.cpp  CommandRun.cpp  CommandStandAlone.cpp  Config.cpp  ConfigResolver.cpp  ConfigValidator.cpp  CoverageInfo.cpp  DefaultLogger.cpp  Evaluator.cpp  GitRepository.cpp  GitSourceTree.cpp  GoogleTestXmlParser.cpp  HTMLReport.cpp  HtmlReport.cpp  Logger.cpp  Logging.cpp  MainCLI.cpp  Mutable.cpp  Mutables.cpp  Mutant.cpp  MutantGenerator.cpp  MutationFactory.cpp  MutationResult.cpp  MutationResults.cpp  MutationRunner.cpp  MutationSummary.cpp  OomHandler.cpp  PartitionedWorkspaceMerger.cpp  QTestXmlParser.cpp  RandomMutantGenerator.cpp  Report.cpp  Repository.cpp  (+39 more)
src/docGenerator/: DocGenerator.cpp  IndexHTMLGenerator.cpp  IndexHtmlGenerator.cpp  SrcHTMLGenerator.cpp  SrcHtmlGenerator.cpp
src/mutation-operators/: aor.cpp  bor.cpp  lcr.cpp  ror.cpp  sbr.cpp  sor.cpp  uor.cpp
src/ncstream/: NcWindowStreambuf.cpp
src/operators/: MutationOperator.cpp  aor.cpp  bor.cpp  lcr.cpp  ror.cpp  sdl.cpp  sor.cpp  uoi.cpp
src/stages/: BaselineBuildStage.cpp  BaselineTestStage.cpp  CheckConfigStage.cpp  ConfigValidationStage.cpp  DryRunStage.cpp  EvaluationStage.cpp  GenerationStage.cpp  InitStage.cpp  OriginalBuildStage.cpp  OriginalTestStage.cpp  PopulateStage.cpp  ReportStage.cpp
src/util/: Subprocess.cpp  io.cpp
test/: AORTest.cpp  BORTest.cpp  BaselineTestStageTest.cpp  CMakeLists.txt  CTestXmlParserTest.cpp  CheckConfigStageTest.cpp  CliConfigParserTest.cpp  ConfigTest.cpp  ConfigValidationStageTest.cpp  ConfigValidatorTest.cpp  ConsoleTest.cpp  ContainerTest.cpp  CoverageInfoTest.cpp  DefaultLoggerTest.cpp  DocGeneratorTest.cpp  DryRunStageTest.cpp  EvaluationStageTest.cpp  EvaluatorTest.cpp  ExceptionTest.cpp  FilesystemTest.cpp  FormatterTest.cpp  GenerationStageTest.cpp  GitHarnessTest.cpp  GitRepositoryTest.cpp  GitSourceTreeTest.cpp  GoogleTestXmlParserTest.cpp  HTMLReportTest.cpp  HtmlReportTest.cpp  InitStageTest.cpp  IoTest.cpp  LCRTest.cpp  LoggerTest.cpp  LoggingTest.cpp  MainCLITest.cpp  MutablesTest.cpp  MutantsTest.cpp  MutationFactoryTest.cpp  MutationResultsTest.cpp  MutationRunnerTest.cpp  OomHandlerTest.cpp  (+35 more)
test/fixture/dir/: file
test/fixture/dir/dir/: file
test/harness/: CMakeLists.txt  GitHarness.cpp  git_harness.cpp  git_harness.hpp
test/harness/git-harness/: GitHarness.hpp
test/include/: CaptureHelper.hpp  SampleFileGeneratorForTest.hpp
test/include/helper/: CaptureHelper.hpp  FileTestHelper.hpp  OperatorTestBase.hpp  SampleFileGeneratorForTest.hpp  SentinelReportTestBase.hpp  StdinGuard.hpp  TestTempDir.hpp  ThrowMessageMatcher.hpp
test/input/sample1/: CMakeLists.txt  sample1.cpp  test_main.cpp
test_commands/: conftest.py  test_evaluate.py  test_integration.py  test_mutate.py  test_populate.py  test_report.py  test_standalone.py
(+47 files in other folders)
